@@ -179,10 +179,10 @@ def process_game(*, message: telebot.types.Message, user_id: int):
         types.InlineKeyboardButton(text="Go down", callback_data=f"game:move_down.user:{user_id}"),
         types.InlineKeyboardButton(text="Go right", callback_data=f"game:move_right.user:{user_id}"),
     )
-    data_api.get_small_maze(uuid=data_api.get_uuid(user_id=user_id))
-    with open(f"{data_api.dirs["temp maze files"]}/temp_maze_{data_api.get_uuid(user_id=user_id)}.png", "rb") as file:
+    data_api.get_small_maze(user_id=user_id)
+    with open(f"{data_api.dirs["temp maze files"]}/temp_maze_{user_id}.png", "rb") as file:
         bot.send_photo(message.chat.id, file, reply_markup=markup)
-    remove(f"{data_api.dirs["temp maze files"]}/temp_maze_{data_api.get_uuid(user_id=user_id)}.png")
+    remove(f"{data_api.dirs["temp maze files"]}/temp_maze_{user_id}.png")
 
 
 @bot.message_handler(content_types=["text"])
