@@ -1,4 +1,4 @@
 Hello and welcome to <b>The Maze Game</b>.
 
 -----------------------
-Game version: v0.0.9b
+Game version: v0.1.0-pre0
