@@ -28,3 +28,5 @@ v0.0.7b - v0.0.9b
 - Removed saving whole maze pictures from maze generation as it's not needed
 - Got ready to implement the fighting system
 Release v0.1.0:
+- Removed UUID system
+- Remade saves system again (UUIDs --> Telegram IDs)
